modules/cli/src/test/resources/good/misc/globals/gchoice/Choice02.scr
module good.misc.globals.gchoice.Choice02;

global protocol Choice2(role A, role B)
{
	choice at A
	{
		//l1() from B to A;  // Uncomment is bad
		l1() from A to B;
	}
}

