modules/cli/src/test/resources/bad/wfchoice/gchoice/Choice01.scr
module bad.wfchoice.gchoice.Choice01;

global protocol Choice1(role A, role B)
{
	choice at A
	{
		l1() from A to B;
	}
	or
	{
		l1() from A to B;  // Uncomment is bad
		l2() from A to B;
	}
}
